# workflow_test

./: .gitignore  CMakeLists.txt  example1.in  example1.out  tasks
src/: main.cpp
src/Workflow/: Workflow.cpp  Workflow.h  workflow_functions.cpp  workflow_functions.h
tests/: workflow_functions_test.cpp  workflow_functions_test.cpp.h
